# CrossPlat

./: .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  ProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
dependencies/: CMakeLists.txt
dependencies/enet/: enet.h
include/utils/: stb_image.h
src/: CMakeLists.txt  Main.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.h  Client.hpp  ClientOptions.h  ClientOptions.hpp  GameState.cpp  GameState.h  GameState.hpp  Image.cpp  Image.h  Render.cpp  SDLErrors.cpp  SDLErrors.h  Window.cpp  Window.h
src/client/input/: InputManager.cpp  KeyboardState.cpp  KeyboardState.h  KeyboardState.hpp  MouseState.cpp  MouseState.h  MouseState.hpp
src/client/network/: ClientNet.cpp  ClientNet.hpp
src/client/render/: Image.cpp  Image.h  Image.hpp  Pixels.h  Pixels.hpp  Player.h  Player.hpp  Render.cpp  Render.h  Render.hpp  RenderTypes.h  Sprite.h  Sprite.hpp  Texture.cpp  Texture.h  TextureErrors.h  Window.cpp  Window.h
src/client/render/sdl/: SDLErrors.cpp  SDLErrors.h  SDLErrors.hpp  Window.cpp  Window.h  Window.hpp
src/client/render/texture/: Texture.cpp  Texture.h  Texture.hpp  TextureErrors.cpp  TextureErrors.hpp  TextureManager.cpp  TextureManager.h  TextureManager.hpp
src/client/utils/: FrameTimer.cpp  FrameTimer.hpp
src/common/common/: CMakeLists.txt  Common.cpp  Common.h  Debug.cpp  Debug.hpp  Entity.h  ErrorHandler.cpp  ErrorHandler.h  ErrorHandler.hpp  GameMap.cpp  GameMap.h  GameOptions.cpp  GameOptions.hpp  PlayerControl.h  Types.h
src/common/common/constructs/: Entity.cpp  Entity.hpp  GameMap.cpp  GameMap.hpp  Player.cpp  Player.hpp  PlayerControl.cpp  PlayerControl.h  PlayerControl.hpp  Types.hpp
src/common/common/network/: Deserialize.cpp  Deserialize.hpp  Net.cpp  Net.h  Net.hpp  NetworkCommands.hpp  NetworkErrors.cpp  NetworkErrors.hpp  Packet.cpp  Packet.hpp  Serialize.cpp  Serialize.hpp
src/server/: CMakeLists.txt  Server.cpp  Server.h  Server.hpp
